--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,3 +247,36 @@ jobs:
         set -e
         set -x
         eatmydata apt-get --yes --quiet install ../*.deb
+
+  cppcheck:
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+        fetch-depth: 0
+    - name: Perform Source Code checks that were successful in the past
+      run: |
+        set -x
+        git fetch --recurse-submodules=no https://github.com/linuxcnc/linuxcnc refs/tags/*:refs/tags/*
+        sudo apt-get -y install cppcheck
+        
+    - name: C
+      run: |
+        echo -n "I (1/4): checking HAL folders with C code only from dir "; pwd
+        for d in src/hal/classicladder src/hal/components; do (cd $d && cppcheck -j $(nproc) --language=c --force *.h *.c); done
+        echo -n "I (2/4): checking EMC folders with C code only from dir "; pwd
+        for d in src/emc/motion-logger src/emc/tp; do (cd $d && cppcheck -j $(nproc) --language=c --force *.h *.c); done
+        # problematic: src/hal/drivers src/hal/user_comps src/hal/utits
+        
+    - name: C++
+      run: |
+        echo -n "I (3/4): checking EMC folders with C++ code only from dir "; pwd
+        for d in src/emc/canterp src/emc/ini src/emc/pythonplugin src/emc/tooldata; do (cd $d && cppcheck -j $(nproc) --language=c++ --force *.hh *.cc); done
+        # problematic iotask src/emc/sai src/emc/task
+
+    - name: C and C++ in same dir
+      run: |
+        echo -n "I (4/4): checking EMC folders with both C and C++ code from dir "; pwd
+        for d in src/emc/rs274ngc; do (cd $d && cppcheck -j $(nproc) --language=c --force *.h *.c && cppcheck -j $(nproc) --language=c++ --force *.hh *.cc); done
+        # problematic src/emc/kinematics src/emc/nml_intf src/emc/usr_intf
