introduce "conventional-directions" HAL pin.
when set to true, rotational axes direction will
follow the conventions as documented in the manual

--- a/configs/sim/axis/vismach/5axis/table-rotary-tilting/xyzac-trt.ini
+++ b/configs/sim/axis/vismach/5axis/table-rotary-tilting/xyzac-trt.ini
@@ -69,6 +69,7 @@ HALCMD = sets :z-offset     10
 HALCMD = setp xyzac-trt-kins.x-rot-point 0
 HALCMD = setp xyzac-trt-kins.y-rot-point 0
 HALCMD = setp xyzac-trt-kins.z-rot-point 0
+HALCMD = setp xyzac-trt-kins.conventional-directions 0
 
 [HALUI]
 # NOTE: kinstype==0 is identity kins because sparm=identityfirst
