--- a/configs/sim/axis/vismach/5axis/table-rotary-tilting/xyzbc-trt.ini
+++ b/configs/sim/axis/vismach/5axis/table-rotary-tilting/xyzbc-trt.ini
@@ -69,6 +69,7 @@ HALCMD = sets :z-offset     -15
 HALCMD = setp xyzbc-trt-kins.x-rot-point 0
 HALCMD = setp xyzbc-trt-kins.y-rot-point 0
 HALCMD = setp xyzbc-trt-kins.z-rot-point 0
+HALCMD = setp xyzbc-trt-kins.conventional-directions 0
 
 [HALUI]
 # NOTE: kinstype==0 is identity kins because sparm=identityfirst
