RTAI: Fix halcompile (Use M instead of SUBDIRS)
Originally, halcompile used the now-removed SUBDIRS variable.
This meant that any tests that relied on building kernel modules
would fail. Convert to M=$(PWD) instead.

Signed-off-by: Alec Ari <neotheuser@ymail.com>

--- a/src/Makefile.modinc.in
+++ b/src/Makefile.modinc.in
@@ -89,7 +89,7 @@ EXTRA_CFLAGS += -Wframe-larger-than=2560
 
 ifeq ($(BUILDSYS),kbuild)
 modules:
-	$(MAKE) KBUILD_EXTRA_SYMBOLS=$(RTLIBDIR)/Module.symvers -C $(KERNELDIR) SUBDIRS=`pwd` CC=$(CC) V=0 modules
+	$(MAKE) KBUILD_EXTRA_SYMBOLS=$(RTLIBDIR)/Module.symvers -C $(KERNELDIR) M=$(PWD) CC=$(CC) V=0 modules
 
 clean:
 	rm *.ko *.mod.c *.o
