--- a/debian/linuxcnc.files.in
+++ b/debian/linuxcnc.files.in
@@ -17,17 +17,9 @@ usr/lib/python*/*/qtvcp/*/*
 usr/lib/python*/*/qtvcp/*/*/*
 usr/share/axis/images/*
 usr/share/axis/tcl/*
-usr/share/glade3
-usr/share/doc/linuxcnc/gcode.html
-usr/share/doc/linuxcnc/gcode_fr.html
-usr/share/doc/linuxcnc/gcode_es.html
-usr/share/doc/linuxcnc/gcode_vi.html
-usr/share/doc/linuxcnc/UPDATING
-usr/share/doc/linuxcnc/NEWS
 usr/share/doc/linuxcnc/AUTHORS
 usr/share/doc/linuxcnc/axis_light_background
-usr/share/doc/linuxcnc/README
-usr/share/doc/linuxcnc/tklinuxcnc.txt
+usr/share/doc/linuxcnc/README.adoc
 usr/share/doc/linuxcnc/README.axis
 usr/share/doc/linuxcnc/examples/nc_files
 usr/share/doc/linuxcnc/examples/sample-configs/*/*
