--- a/debian/control.bottom.in
+++ b/debian/control.bottom.in
@@ -1,35 +1,44 @@
 Package: @MAIN_PACKAGE_NAME@
-Conflicts: linuxcnc-sim, @OTHER_MAIN_PACKAGE_NAME@
+Conflicts:
+    linuxcnc-sim,
+    @OTHER_MAIN_PACKAGE_NAME@
+Breaks:
+    linuxcnc-doc-en (<= 2.9.0~pre0+git20220402.2500863908-4),
+    linuxcnc-doc-es (<= 2.9.0~pre0+git20220402.2500863908-4),
+    linuxcnc-doc-fr (<= 2.9.0~pre0+git20220402.2500863908-4)
 Architecture: any
-Recommends: linuxcnc-doc-en | linuxcnc-doc,
-    python-pyqt5,
-    python-pyqt5.qsci,
-    python-pyqt5.qtopengl,
-    python-pyqt5.qtsvg,
-    python-pyqt5.qtwebkit,
-    python-opencv,
-    python-rsvg,
-    python-dbus.mainloop.pyqt5,
-    gstreamer1.0-tools,
-    python-espeak,
-    espeak,
-    pyqt5-dev-tools,
-    @EXTRA_RECOMMENDS@
-Depends: ${shlibs:Depends}, @KERNEL_DEPENDS@,
-    tcl@TCLTK_VERSION@, tk@TCLTK_VERSION@, bwidget (>= 1.7), libtk-img (>=1.13),
-    python (>= @PYTHON_VERSION@), python (<< @PYTHON_VERSION_NEXT@),
-    ${python:Depends}, ${misc:Depends},
-    python@PYTHON_VERSION@-tk,
-    python@PYTHON_VERSION@-glade2 | python-glade2,
-    python@PYTHON_VERSION@-numpy | python-numpy,
+Depends:
+    ${misc:Depends},
+    ${shlibs:Depends},
+    @KERNEL_DEPENDS@,
+    @MODUTILS_DEPENDS@,
+    blt,
+    mesa-utils,
+    python3-tk,
+    python3-numpy,
+    python3-cairo,
+    python3-gi-cairo,
+    python3-opengl,
+    python3-configobj,
+    python3-xlib,
+    libgtksourceview-3.0-dev,
+    tcl@TCLTK_VERSION@,
+    tk@TCLTK_VERSION@,
+    bwidget (>= 1.7),
+    tclreadline,
+    tclx,
+    @QTVCP_DEPENDS@,
+    procps, psmisc,
+    udev
+Recommends:
+    linuxcnc-doc-en | linuxcnc-doc,
+    librsvg2-dev,
+    @EXTRA_RECOMMENDS@,
     @PYTHON_IMAGING@,
-    @PYTHON_IMAGING_TK@,
-    python-gtksourceview2,
-    python-vte | gir1.2-vte-2.91,
-    @PYTHON_GST@,
-    python-xlib, python-gtkglext1, python-configobj,
-    tclreadline, procps, psmisc, module-init-tools | kmod, tclx,
-    mesa-utils, blt
+    @PYTHON_IMAGING_TK@
+Suggests:
+    mesaflash,
+    onboard
 Description: motion controller for CNC machines and robots
  LinuxCNC is the next-generation Enhanced Machine Controller which
  provides motion control for CNC machine tools and robotic
