--- a/scripts/linuxcnc.in
+++ b/scripts/linuxcnc.in
@@ -954,7 +954,7 @@ run_applications
 # wait for traj to process for up to 10s before screen loading do to race condition
 RACE_TIMEOUT=$(( $SECONDS + 10 ))
 chk=`halcmd getp ini.traj_max_velocity`
-while (( $(echo "$chk == 0" | bc -l) )) ; do
+while (( $(awk 'BEGIN {print ('$chk' == 0)}') )); do
     if [ $SECONDS -ge $RACE_TIMEOUT ]; then
         echo "ini.traj_max_velocity still 0.0 after $SECONDS seconds" | tee -a $PRINT_FILE $DEBUG_FILE
         break
