--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -264,6 +264,7 @@
 [type: man_def] man/man3/hal_del_funct_from_thread.3hal $lang:man/$lang/man3/hal_del_funct_from_thread.3hal
 [type: man_def] man/man3/hal_exit.3hal $lang:man/$lang/man3/hal_exit.3hal
 [type: man_def] man/man3/hal_export_funct.3hal $lang:man/$lang/man3/hal_export_funct.3hal
+[type: man_def] man/man3/hal_export_functf.3hal $lang:man/$lang/man3/hal_export_functf.3hal
 [type: man_def] man/man3/hal_float_t.3hal $lang:man/$lang/man3/hal_float_t.3hal
 [type: man_def] man/man3/hal_get_lock.3hal $lang:man/$lang/man3/hal_get_lock.3hal
 [type: man_def] man/man3/hal_init.3hal $lang:man/$lang/man3/hal_init.3hal
