--- a/docs/man/.gitignore
+++ b/docs/man/.gitignore
@@ -6,9 +6,11 @@ cat1/
 cat3/
 cat9/
 
+man1/emccalib.1
 man1/emccalib.tcl.1
 man1/halstreamer.1
 man1/hy_gt_vfd.1
+man1/inivar.1
 man1/linuxcnc.1
 man1/mqtt-publisher.1
 man1/pi500_vfd.1
@@ -17,7 +19,6 @@ man1/svd-ps_vfd.1
 man1/thermistor.1
 man1/wj200_vfd.1
 man1/xhc-whb04b-6.1
-man1/emccalib.1
 
 man3/hm2_pktuart.3
 
