new bar class, new driver 'rand9

--- a/configs/tomp/nuBarAxisTab.ini
+++ b/configs/tomp/nuBarAxisTab.ini
@@ -1,4 +1,5 @@
 #~ # 18sep yesterday the thumb stoppe moving
+# touch here X
 # i reduced to single vbal   no thumb nmotion
 #  yet the value x0y0x1y1 chgd
 # the hal comp had to be loadrt'd  NOT ;oadusr'd
@@ -30,28 +31,12 @@ DEBUG = 0
 # and as a tab i need to update from linuxcnc 2,8.4
 
 [DISPLAY]
-# 1st 2 embed pyvcp panel into axis at bottom
-#PYVCP= simpyfree2.xml
-#PYVCP_POSITION = BOTTOM
-
-# 2nd 2 embed pyvcp panel into a tab 
-EMBED_TAB_NAME = bars
+# next 2 lines copied and hacked form supplied pyvcp em,bewdded tab   no -x {XWID} needeed
+# NB this name will prefix all pinms belonmging tothe disp[lay
+EMBED_TAB_NAME = newBars
 # EMBED_TAB_COMMAND = gladevcp -H my_vcp_connect.hal -x {XID} my_vcp.glade
-#EMBED_TAB_COMMAND = pyvcp -x {XID} simpyfree2.xml
+EMBED_TAB_COMMAND = pyvcp nuBarAxisTab.xml
 
-# 07oct where is pyvcp_bars.xml  its NOT in ~/linuxcnc/confiigs/simpyfree2
-# so how can this cfg run ???  cant find so copied this to fred.ini wondering inf that wiull run oir fasil to find elusive xm; file
-# Machine configuration directory is '/home/tomp/linuxcnc/configs/simpyfree2'
-#Machine configuration file is 'pyTk-tab04.ini'
-
-EMBED_TAB_COMMAND = "./nuBarAxisTab.xml"
-# 19seo ^^^ was missing pyvcp 
-# CANNOT HAVE COMMENT AT END OF LINE IN THIS FILE   COMMENT MUST BE ON LINE BY ITSELF
-
-
-# ^^& as close as i get... 
-# the tab is cretaed, but empty, the panel is created and f;pationg
-# looks like i need 2.9   
 # see  https://linuxcnc.org/docs/2.9/html/getting-started/updating-linuxcnc.html#_upgrade_to_the_new_version
 
 # errors trying to embed pyvcp to tab in emc 2.8.4 ( may rqrs 2.9.?
@@ -158,7 +143,7 @@ HALFILE = simulated_home.hal
 
 # Single file that is executed after the GUI has started.  Only supported by
 # AXIS at this time (only AXIS creates a HAL component of its own)
-POSTGUI_HALFILE = nuBarsAxisTab.hal
+POSTGUI_HALFILE = nuBarAxisTab.hal
 
 HALUI = halui
 
