cleaned noted, edited bad reference to  to rand8, correcting to rean9

--- a/configs/tomp/nuBarAxisTab.ini
+++ b/configs/tomp/nuBarAxisTab.ini
@@ -1,13 +1,6 @@
-#~ # 18sep yesterday the thumb stoppe moving
-# touch here X
-# i reduced to single vbal   no thumb nmotion
-#  yet the value x0y0x1y1 chgd
-# the hal comp had to be loadrt'd  NOT ;oadusr'd
-# so i guess some rt prob,
-# esp running a comp usin fo on non=fp thread
+# sim axis demo for new puvcp_widget class bat
+# demo is an embedded axis tab showing several bar variations
 #
-# so try the old [ython comp
-
 # General section -------------------------------------------------------------
 [EMC]
 # Version of this INI file
@@ -24,34 +17,16 @@ MACHINE =               nuBars
 DEBUG = 0
 
 # Sections for display options ------------------------------------------------
-# 24aug uf pyvcp is on right, then TOO WIDE, so try bottom
-# it works at bottom 
-# but 
-# i'd really ;ike the edm ctrl as  a tab OR as a floating pane
-# and as a tab i need to update from linuxcnc 2,8.4
 
 [DISPLAY]
-# next 2 lines copied and hacked form supplied pyvcp em,bewdded tab   no -x {XWID} needeed
 # NB this name will prefix all pinms belonmging tothe disp[lay
 EMBED_TAB_NAME = newBars
-# EMBED_TAB_COMMAND = gladevcp -H my_vcp_connect.hal -x {XID} my_vcp.glade
 EMBED_TAB_COMMAND = pyvcp nuBarAxisTab.xml
 
 # see  https://linuxcnc.org/docs/2.9/html/getting-started/updating-linuxcnc.html#_upgrade_to_the_new_version
 
-# errors trying to embed pyvcp to tab in emc 2.8.4 ( may rqrs 2.9.?
-# """
-#  option -x not recognized
-#  Usage: pyvcp [-g WIDTHxHEIGHT+XOFFSET+YOFFSET][-c hal_component_name] myfile.xml
-#  If the component name is not specified, the basename of the xml file is used.
-#  -g options are in pixel units, XOFFSET/YOFFSET is referenced from top left of screen
-#  use -g WIDTHxHEIGHT for just setting size or -g +XOFFSET+YOFFSET for just position
-# """
 
 DISPLAY =             axis
-# so, how to get th THinter to display? i use a cmd , but here???
-# and its NoT pyvcp  format
-#  hide for now   PYVCP = python3 pyTKgui04.py
 
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.100
@@ -90,7 +65,6 @@ gif = image-to-gcode
 jpg = image-to-gcode
 dxf = image-to-gcode
 
-# TJP CAN I EXEC A PY3 FILE?  i chgd py = python   to  py = python3
 py = python3
 
 nc = /usr/bin/axis
