When checking for pkg-config, use it's own macro

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -80,7 +80,7 @@ AC_PATH_PROG(EGREP, egrep)
 #
 # check for pkg-config
 #
-AC_PATH_PROG([PKG_CONFIG], [pkg-config])
+PKG_PROG_PKG_CONFIG
 if test -z "$PKG_CONFIG"; then
   AC_MSG_ERROR([pkg-config is required to build LinuxCNC])
 fi
