--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -80,6 +80,7 @@
 [type: AsciiDoc_def] src/getting-started/getting-linuxcnc.adoc $lang:src/$lang/getting-started/getting-linuxcnc.adoc
 [type: AsciiDoc_def] src/getting-started/running-linuxcnc.adoc $lang:src/$lang/getting-started/running-linuxcnc.adoc
 [type: AsciiDoc_def] src/getting-started/system-requirements.adoc $lang:src/$lang/getting-started/system-requirements.adoc
+[type: AsciiDoc_def] src/getting-started/hardware-interface.adoc $lang:src/$lang/getting-started/hardware-interface.adoc
 [type: AsciiDoc_def] src/getting-started/updating-linuxcnc.adoc $lang:src/$lang/getting-started/updating-linuxcnc.adoc
 [type: AsciiDoc_def] src/gui/axis.adoc $lang:src/$lang/gui/axis.adoc
 [type: AsciiDoc_def] src/gui/filter-programs.adoc $lang:src/$lang/gui/filter-programs.adoc
