--- a/configs/sim/qtdragon_lathe/basic_xz_lathe/lathe.ini
+++ b/configs/sim/qtdragon_lathe/basic_xz_lathe/lathe.ini
@@ -28,6 +28,11 @@ INTRO_TIME = 5
 
 CYCLE_TIME = 0.100
 
+# optional tab showing an external qtvcp panel
+EMBED_TAB_NAME=Macro
+EMBED_TAB_COMMAND=qtvcp macros
+EMBED_TAB_LOCATION=tabWidget_utilities
+
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Grayscale Depth Image
 PROGRAM_EXTENSION = .py Python Script
@@ -38,6 +43,7 @@ PROGRAM_EXTENSION = .py Python Script
 
 [RS274NGC]
 PARAMETER_FILE = sim-lathe.var
+SUBROUTINE_PATH = ../../../../nc_files/macros/lathe
 
 [EMCMOT]
       EMCMOT = motmod
