Added new man pages to po4a and d/linuxcnc.install.in.
This should fix build problems.

--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -186,8 +186,11 @@
 [type: AsciiDoc_def] src/man/man1/max5gui.1.adoc $lang:src/$lang/man/man1/max5gui.1.adoc
 [type: AsciiDoc_def] src/man/man1/mb2hal.1.adoc $lang:src/$lang/man/man1/mb2hal.1.adoc
 [type: AsciiDoc_def] src/man/man1/mdi.1.adoc $lang:src/$lang/man/man1/mdi.1.adoc
+[type: AsciiDoc_def] src/man/man1/melfagui.1.adoc $lang:src/$lang/man/man1/melfagui.1.adoc
 [type: AsciiDoc_def] src/man/man1/milltask.1.adoc $lang:src/$lang/man/man1/milltask.1.adoc
+[type: AsciiDoc_def] src/man/man1/millturn.1.adoc $lang:src/$lang/man/man1/millturn.1.adoc
 [type: AsciiDoc_def] src/man/man1/mitsub_vfd.1.adoc $lang:src/$lang/man/man1/mitsub_vfd.1.adoc
+[type: AsciiDoc_def] src/man/man1/modcompile.1.adoc $lang:src/$lang/man/man1/modcompile.1.adoc
 [type: AsciiDoc_def] src/man/man1/monitor-xhc-hb04.1.adoc $lang:src/$lang/man/man1/monitor-xhc-hb04.1.adoc
 [type: AsciiDoc_def] src/man/man1/motion-logger.1.adoc $lang:src/$lang/man/man1/motion-logger.1.adoc
 [type: AsciiDoc_def] src/man/man1/moveoff_gui.1.adoc $lang:src/$lang/man/man1/moveoff_gui.1.adoc
@@ -206,6 +209,7 @@
 [type: AsciiDoc_def] src/man/man1/qtplasmac-materials.1.adoc $lang:src/$lang/man/man1/qtplasmac-materials.1.adoc
 [type: AsciiDoc_def] src/man/man1/qtplasmac-plasmac2qt.1.adoc $lang:src/$lang/man/man1/qtplasmac-plasmac2qt.1.adoc
 [type: AsciiDoc_def] src/man/man1/qtplasmac-setup.1.adoc $lang:src/$lang/man/man1/qtplasmac-setup.1.adoc
+[type: AsciiDoc_def] src/man/man1/qtplasmac_gcode.1.adoc $lang:src/$lang/man/man1/qtplasmac_gcode.1.adoc
 [type: AsciiDoc_def] src/man/man1/qtvcp.1.adoc $lang:src/$lang/man/man1/qtvcp.1.adoc
 [type: AsciiDoc_def] src/man/man1/rotarydelta.1.adoc $lang:src/$lang/man/man1/rotarydelta.1.adoc
 [type: AsciiDoc_def] src/man/man1/rs274.1.adoc $lang:src/$lang/man/man1/rs274.1.adoc
@@ -214,12 +218,15 @@
 [type: AsciiDoc_def] src/man/man1/schedrmt.1.adoc $lang:src/$lang/man/man1/schedrmt.1.adoc
 [type: AsciiDoc_def] src/man/man1/scorbot-er-3.1.adoc $lang:src/$lang/man/man1/scorbot-er-3.1.adoc
 [type: AsciiDoc_def] src/man/man1/sendkeys.1.adoc $lang:src/$lang/man/man1/sendkeys.1.adoc
+[type: AsciiDoc_def] src/man/man1/setup_designer.1.adoc $lang:src/$lang/man/man1/setup_designer.1.adoc
 [type: AsciiDoc_def] src/man/man1/shuttle.1.adoc $lang:src/$lang/man/man1/shuttle.1.adoc
 [type: AsciiDoc_def] src/man/man1/sim_pin.1.adoc $lang:src/$lang/man/man1/sim_pin.1.adoc
 [type: AsciiDoc_def] src/man/man1/simulate_probe.1.adoc $lang:src/$lang/man/man1/simulate_probe.1.adoc
 [type: AsciiDoc_def] src/man/man1/stepconf.1.adoc $lang:src/$lang/man/man1/stepconf.1.adoc
 [type: AsciiDoc_def] src/man/man1/svd-ps_vfd.1.adoc $lang:src/$lang/man/man1/svd-ps_vfd.1.adoc
 [type: AsciiDoc_def] src/man/man1/teach-in.1.adoc $lang:src/$lang/man/man1/teach-in.1.adoc
+[type: AsciiDoc_def] src/man/man1/tool_mmap_read.1.adoc $lang:src/$lang/man/man1/tool_mmap_read.1.adoc
+[type: AsciiDoc_def] src/man/man1/tool_watch.1.adoc $lang:src/$lang/man/man1/tool_watch.1.adoc
 [type: AsciiDoc_def] src/man/man1/tooledit.1.adoc $lang:src/$lang/man/man1/tooledit.1.adoc
 [type: AsciiDoc_def] src/man/man1/touchy.1.adoc $lang:src/$lang/man/man1/touchy.1.adoc
 [type: AsciiDoc_def] src/man/man1/update_ini.1.adoc $lang:src/$lang/man/man1/update_ini.1.adoc
@@ -228,6 +235,7 @@
 [type: AsciiDoc_def] src/man/man1/xhc-hb04-accels.1.adoc $lang:src/$lang/man/man1/xhc-hb04-accels.1.adoc
 [type: AsciiDoc_def] src/man/man1/xhc-hb04.1.adoc $lang:src/$lang/man/man1/xhc-hb04.1.adoc
 [type: AsciiDoc_def] src/man/man1/xhc-whb04b-6.1.adoc $lang:src/$lang/man/man1/xhc-whb04b-6.1.adoc
+[type: AsciiDoc_def] src/man/man1/xyzab-tdr-gui.1.adoc $lang:src/$lang/man/man1/xyzab-tdr-gui.1.adoc
 [type: AsciiDoc_def] src/man/man1/xyzac-trt-gui.1.adoc $lang:src/$lang/man/man1/xyzac-trt-gui.1.adoc
 [type: AsciiDoc_def] src/man/man1/xyzbc-trt-gui.1.adoc $lang:src/$lang/man/man1/xyzbc-trt-gui.1.adoc
 [type: AsciiDoc_def] src/man/man3/PM_ROTATION_VECTOR.3.adoc $lang:src/$lang/man/man3/PM_ROTATION_VECTOR.3.adoc
