Added man page link too to deb.

--- a/debian/linuxcnc.install.in
+++ b/debian/linuxcnc.install.in
@@ -199,6 +199,7 @@ usr/share/man/man1/mdro.1
 usr/share/man/man1/melfagui.1
 usr/share/man/man1/milltask.1
 usr/share/man/man1/millturn.1
+usr/share/man/man1/millturngui.1
 usr/share/man/man1/mitsub_vfd.1
 usr/share/man/man1/modcompile.1
 usr/share/man/man1/monitor-xhc-hb04.1
