--- a/docs/man/.gitignore
+++ b/docs/man/.gitignore
@@ -6,32 +6,121 @@ cat1/
 cat3/
 cat9/
 
+man1/5axisgui.1
+man1/axis-remote.1
+man1/axis.1
+man1/debuglevel.1
+man1/elbpcom.1
 man1/emccalib.1
-man1/emccalib.tcl.1
+man1/gladevcp_demo.1
+man1/gladevcp.1
+man1/gmoccapy.1
+man1/gremlin_view.1
+man1/gs2_vfd.1
+man1/gscreen.1
+man1/hal_input.1
+man1/hal_manualtoolchange.1
+man1/hal-histogram.1
+man1/halcmd_twopass.1
+man1/halcmd.1
+man1/halcompile.1
+man1/halmeter.1
+man1/halreport.1
+man1/halrmt.1
+man1/halrun.1
+man1/halsampler.1
+man1/halscope.1
+man1/halshow.1
 man1/halstreamer.1
+man1/haltcl.1
+man1/halui.1
+man1/hbmgui.1
+man1/hexagui.1
 man1/hy_gt_vfd.1
+man1/hy_vfd.1
+man1/image-to-gcode.1
 man1/inivar.1
+man1/io.1
+man1/iocontrol.1
+man1/iov2.1
+man1/latency-histogram.1
+man1/latency-plot.1
+man1/latency-test.1
+man1/lineardelta.1
+man1/linuxcnc_info.1
+man1/linuxcnc_module_helper.1
+man1/linuxcnc_var.1
 man1/linuxcnc.1
+man1/linuxcnclcd.1
+man1/linuxcncmkdesktop.1
+man1/linuxcncrsh.1
+man1/linuxcncsvr.1
+man1/linuxcnctop.1
+man1/maho600gui.1
+man1/max5gui.1
+man1/mb2hal.1
+man1/mdi.1
+man1/mdro.1
+man1/melfagui.1
+man1/milltask.1
+man1/millturn.1
+man1/millturngui.1
+man1/mitsub_vfd.1
+man1/modcompile.1
+man1/monitor-xhc-hb04.1
+man1/motion-logger.1
+man1/moveoff_gui.1
 man1/mqtt-publisher.1
+man1/ngcgui.1
+man1/panelui.1
 man1/pi500_vfd.1
+man1/pmx485-test.1
+man1/pmx485.1
+man1/pncconf.1
+man1/puma560gui.1
+man1/pumagui.1
+man1/pyngcgui.1
+man1/pyui.1
+man1/pyvcp_demo.1
+man1/pyvcp.1
+man1/qtplasmac_gcode.1
+man1/qtplasmac-cfg2prefs.1
+man1/qtplasmac-materials.1
+man1/qtplasmac-plasmac2qt.1
+man1/qtplasmac-setup.1
+man1/qtvcp.1
+man1/rotarydelta.1
+man1/rs274.1
+man1/rtapi_app.1
+man1/scaragui.1
+man1/schedrmt.1
+man1/scorbot-er-3.1
 man1/sendkeys.1
+man1/setup_designer.1
+man1/shuttle.1
+man1/sim_pin.1
+man1/sim-torch.1
+man1/simulate_probe.1
+man1/stepconf.1
 man1/svd-ps_vfd.1
+man1/teach-in.1
 man1/thermistor.1
+man1/tool_mmap_read.1
+man1/tool_watch.1
+man1/tooledit.1
+man1/touchy.1
+man1/update_ini.1
+man1/vfdb_vfd.1
+man1/vfs11_vfd.1
 man1/wj200_vfd.1
+man1/xhc-hb04-accels.1
+man1/xhc-hb04.1
 man1/xhc-whb04b-6.1
+man1/xyzab-tdr-gui.1
+man1/xyzac-trt-gui.1
+man1/xyzbc-trt-gui.1
 
 man3/EXPORT_FUNCTION.3
-man3/MODULE_AUTHOR.3
-man3/MODULE_DESCRIPTION.3
-man3/MODULE_LICENSE.3
-man3/PM_ROTATION_VECTOR.3
-man3/RTAPI_MP_ARRAY_INT.3
-man3/RTAPI_MP_ARRAY_LONG.3
-man3/RTAPI_MP_ARRAY_STRING.3
-man3/RTAPI_MP_INT.3
-man3/RTAPI_MP_LONG.3
-man3/RTAPI_MP_STRING.3
-man3/hal.3hal
 man3/hal_add_funct_to_thread.3
 man3/hal_bit_t.3
 man3/hal_bool.3
@@ -66,9 +155,8 @@ man3/hal_pin_port_new.3
 man3/hal_pin_s32_new.3
 man3/hal_pin_u32_new.3
 man3/hal_pin_u32_newf.3
-man3/hal_port.3hal
 man3/hal_port_t.3
-man3/hal_port_t.3hal
+man3/hal_port.3hal
 man3/hal_ready.3hal
 man3/hal_s32_t.3
 man3/hal_set_constructor.3hal
@@ -80,43 +168,42 @@ man3/hal_stream.3hal
 man3/hal_type_t.3
 man3/hal_u32_t.3
 man3/hal_unlink.3
+man3/hal.3hal
 man3/hm2_allocate_bspi_tram.3hm2
 man3/hm2_bspi_set_read_function.3hm2
 man3/hm2_bspi_set_write_function.3hm2
 man3/hm2_bspi_setup_chan.3hm2
 man3/hm2_bspi_write_chan.3hm2
-man3/hm2_pktuart.3
 man3/hm2_pktuart_read.3hm2
 man3/hm2_pktuart_send.3hm2
 man3/hm2_pktuart_setup.3hm2
+man3/hm2_pktuart.3
 man3/hm2_tram_add_bspi_frame.3hm2
 man3/hm2_uart_read.3hm2
 man3/hm2_uart_send.3hm2
 man3/hm2_uart_setup.3hm2
 man3/ireal_t.3
+man3/MODULE_LICENSE.3
+man3/PM_ROTATION_VECTOR.3
 man3/real_t.3
-man3/rtapi.3rtapi
 man3/rtapi_app_exit.3rtapi
 man3/rtapi_app_main.3rtapi
 man3/rtapi_atomic.3rtapi
 man3/rtapi_bool.3rtapi
 man3/rtapi_byteorder.3rtapi
 man3/rtapi_clock_set_period.3rtapi
-man3/rtapi_delay.3
-man3/rtapi_delay.3rtapi
 man3/rtapi_delay_max.3
+man3/rtapi_delay.3
 man3/rtapi_device.3rtapi
-man3/rtapi_div_s64.3
 man3/rtapi_div_s64_rem.3
-man3/rtapi_div_u64.3
-man3/rtapi_div_u64.3rtapi
+man3/rtapi_div_s64.3
 man3/rtapi_div_u64_rem.3
+man3/rtapi_div_u64.3
 man3/rtapi_exit.3rtapi
 man3/rtapi_firmware.3rtapi
 man3/rtapi_get_clocks.3
-man3/rtapi_get_msg_level.3rtapi
+man3/rtapi_get_msg_level.3
 man3/rtapi_get_time.3
-man3/rtapi_get_time.3rtapi
 man3/rtapi_gfp.3rtapi
 man3/rtapi_inb.3
 man3/rtapi_init.3rtapi
@@ -124,49 +211,52 @@ man3/rtapi_io.3rtapi
 man3/rtapi_is.3rtapi
 man3/rtapi_list.3rtapi
 man3/rtapi_module_param.3
+man3/RTAPI_MP_ARRAY_INT.3
+man3/RTAPI_MP_ARRAY_LONG.3
+man3/RTAPI_MP_ARRAY_STRING.3
+man3/RTAPI_MP_INT.3
+man3/RTAPI_MP_LONG.3
+man3/RTAPI_MP_STRING.3
 man3/rtapi_mutex.3rtapi
 man3/rtapi_open_as_root.3rtapi
 man3/rtapi_outb.3
 man3/rtapi_parport.3rtapi
 man3/rtapi_pci.3rtapi
-man3/rtapi_print.3
 man3/rtapi_print_msg.3
-man3/rtapi_prio.3
-man3/rtapi_prio.3rtapi
+man3/rtapi_print.3
 man3/rtapi_prio_highest.3
 man3/rtapi_prio_lowest.3
 man3/rtapi_prio_next_higher.3
 man3/rtapi_prio_next_lower.3
+man3/rtapi_prio.3
 man3/rtapi_region.3
-man3/rtapi_region.3rtapi
 man3/rtapi_release_region.3
 man3/rtapi_request_region.3
-man3/rtapi_set_msg_level.3rtapi
-man3/rtapi_shmem.3
-man3/rtapi_shmem.3rtapi
+man3/rtapi_set_msg_level.3
 man3/rtapi_shmem_delete.3
 man3/rtapi_shmem_getptr.3
 man3/rtapi_shmem_new.3
+man3/rtapi_shmem.3
 man3/rtapi_slab.3rtapi
-man3/rtapi_snprintf.3rtapi
+man3/rtapi_snprintf.3
 man3/rtapi_stdint.3rtapi
 man3/rtapi_string.3rtapi
 man3/rtapi_strlcpy.3rtapi
 man3/rtapi_task_delete.3
 man3/rtapi_task_new.3
-man3/rtapi_task_new.3rtapi
-man3/rtapi_task_pause.3rtapi
-man3/rtapi_task_resume.3rtapi
+man3/rtapi_task_pause.3
+man3/rtapi_task_resume.3
 man3/rtapi_task_self.3rtapi
 man3/rtapi_task_start.3rtapi
 man3/rtapi_task_wait.3rtapi
-man3/rtapi_vsnprintf.3rtapi
+man3/rtapi_vsnprintf.3
+man3/rtapi.3rtapi
 man3/undocumented.3hal
 man3/undocumented.3rtapi
 
-man9/abs.9
 man9/abs_s32.9
 man9/abs_s64.9
+man9/abs.9
 man9/and2.9
 man9/anglejog.9
 man9/at_pid.9
@@ -189,51 +279,32 @@ man9/constant.9
 man9/conv_bit_float.9
 man9/conv_bit_s32.9
 man9/conv_bit_s64.9
-man9/conv_bit_s8.9
 man9/conv_bit_u32.9
 man9/conv_bit_u64.9
-man9/conv_bit_u8.9
-man9/conv_float_bit.9
 man9/conv_float_s32.9
 man9/conv_float_s64.9
-man9/conv_float_s8.9
 man9/conv_float_u32.9
 man9/conv_float_u64.9
-man9/conv_float_u8.9
 man9/conv_s32_bit.9
 man9/conv_s32_float.9
 man9/conv_s32_s64.9
-man9/conv_s32_s8.9
 man9/conv_s32_u32.9
 man9/conv_s32_u64.9
-man9/conv_s32_u8.9
 man9/conv_s64_bit.9
 man9/conv_s64_float.9
 man9/conv_s64_s32.9
 man9/conv_s64_u32.9
 man9/conv_s64_u64.9
-man9/conv_s8_bit.9
-man9/conv_s8_float.9
-man9/conv_s8_s32.9
-man9/conv_s8_u32.9
-man9/conv_s8_u8.9
 man9/conv_u32_bit.9
 man9/conv_u32_float.9
 man9/conv_u32_s32.9
 man9/conv_u32_s64.9
-man9/conv_u32_s8.9
 man9/conv_u32_u64.9
-man9/conv_u32_u8.9
 man9/conv_u64_bit.9
 man9/conv_u64_float.9
 man9/conv_u64_s32.9
 man9/conv_u64_s64.9
 man9/conv_u64_u32.9
-man9/conv_u8_bit.9
-man9/conv_u8_float.9
-man9/conv_u8_s32.9
-man9/conv_u8_s8.9
-man9/conv_u8_u32.9
 man9/corexy_by_hal.9
 man9/counter.9
 man9/dbounce.9
@@ -244,8 +315,8 @@ man9/demux.9
 man9/differential.9
 man9/div2.9
 man9/edge.9
-man9/encoder.9
 man9/encoder_ratio.9
+man9/encoder.9
 man9/enum.9
 man9/eoffset_per_angle.9
 man9/estop_latch.9
@@ -282,10 +353,10 @@ man9/laserpower.9
 man9/latencybins.9
 man9/lcd.9
 man9/led_dim.9
+man9/limit_axis.9
 man9/limit1.9
 man9/limit2.9
 man9/limit3.9
-man9/limit_axis.9
 man9/lincurve.9
 man9/lineardeltakins.9
 man9/logic.9
@@ -308,11 +379,11 @@ man9/moveoff.9
 man9/mult2.9
 man9/multiclick.9
 man9/multiswitch.9
-man9/mux16.9
+man9/mux_generic.9
 man9/mux2.9
 man9/mux4.9
 man9/mux8.9
-man9/mux_generic.9
+man9/mux16.9
 man9/near.9
 man9/not.9
 man9/offset.9
@@ -321,17 +392,13 @@ man9/oneshot.9
 man9/opto_ac5.9
 man9/or2.9
 man9/orient.9
-man9/pcl720.9
 man9/pentakins.9
 man9/pid.9
 man9/plasmac.9
-man9/pluto_servo.9
-man9/pluto_step.9
 man9/pumakins.9
 man9/pwmgen.9
 man9/raster.9
 man9/reset.9
-man9/rosekins.9
 man9/rosekins.9
 man9/rotatekins.9
 man9/safety_latch.9
@@ -352,15 +419,13 @@ man9/sim_parport.9
 man9/sim_spindle.9
 man9/simple_tp.9
 man9/sphereprobe.9
-man9/spindle.9
 man9/spindle_monitor.9
+man9/spindle.9
 man9/sserial.9
-man9/stepgen.9
 man9/stepgen.9
 man9/steptest.9
 man9/streamer.9
 man9/sum2.9
-man9/supply.9
 man9/supply.9
 man9/thc.9
 man9/thcud.9
