--- a/docs/po4a.cfg
+++ b/docs/po4a.cfg
@@ -480,9 +480,8 @@
 [type: man_def] man/man9/time.9 $lang:man/$lang/man9/time.9
 [type: man_def] man/man9/timedelay.9 $lang:man/$lang/man9/timedelay.9
 [type: man_def] man/man9/timedelta.9 $lang:man/$lang/man9/timedelta.9
-# These break po4a
-#[type: man_def] man/man9/toggle2nist.9 $lang:man/$lang/man9/toggle2nist.9
-#[type: man_def] man/man9/toggle.9 $lang:man/$lang/man9/toggle.9
+[type: man_def] man/man9/toggle2nist.9 $lang:man/$lang/man9/toggle2nist.9
+[type: man_def] man/man9/toggle.9 $lang:man/$lang/man9/toggle.9
 [type: man_def] man/man9/tristate_bit.9 $lang:man/$lang/man9/tristate_bit.9
 [type: man_def] man/man9/tristate_float.9 $lang:man/$lang/man9/tristate_float.9
 [type: man_def] man/man9/updown.9 $lang:man/$lang/man9/updown.9
