Disabled github CI build on unstable/sid until it start working again.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
+        # drop building on (trixy and) sid until <URL: https://bugs.debian.org/1076675 >
+        # and inkscape is fixed.
+        #image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
+        image: ["debian:buster", "debian:bullseye", "debian:bookworm"]
+
     container:
       image: ${{ matrix.image }}
       # IPC_OWNER is needed for shmget IPC_CREAT
@@ -175,7 +179,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
+        # drop building on (trixy and) sid until <URL: https://bugs.debian.org/1076675 >
+        # and inkscape is fixed.
+        #image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
+        image: ["debian:buster", "debian:bullseye", "debian:bookworm"]
     container:
       image: ${{ matrix.image }}
       # IPC_OWNER is needed for shmget IPC_CREAT
