--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,10 +95,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # drop building on (trixy and) sid until <URL: https://bugs.debian.org/1076675 >
-        # and inkscape is fixed.
-        #image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
-        image: ["debian:buster", "debian:bullseye", "debian:bookworm"]
+        image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
 
     container:
       image: ${{ matrix.image }}
@@ -179,10 +176,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # drop building on (trixy and) sid until <URL: https://bugs.debian.org/1076675 >
-        # and inkscape is fixed.
-        #image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
-        image: ["debian:buster", "debian:bullseye", "debian:bookworm"]
+        image: ["debian:buster", "debian:bullseye", "debian:bookworm", "debian:sid"]
     container:
       image: ${{ matrix.image }}
       # IPC_OWNER is needed for shmget IPC_CREAT
