Try to install asciidoctor automatically via depends

--- a/debian/control.main-pkg.in
+++ b/debian/control.main-pkg.in
@@ -30,7 +30,8 @@ Depends:
     tclx,
     @QTVCP_DEPENDS@,
     procps, psmisc,
-    udev
+    udev,
+    asciidoctor
 Recommends:
     linuxcnc-doc-en | linuxcnc-doc,
     librsvg2-dev,
