8_axis.ini - added postgui

--- a/configs/sim/gmoccapy/8_axis.ini
+++ b/configs/sim/gmoccapy/8_axis.ini
@@ -49,6 +49,9 @@ PATH_PREPEND = ./python
 TOPLEVEL = ./python/toplevel.py
 LOG_LEVEL = 0
 
+# Single file that is executed after the GUI has started.
+POSTGUI_HALFILE = gmoccapy_postgui.hal
+
 [EMCMOT]
 EMCMOT =              motmod
 COMM_TIMEOUT = 1.0
