8_axis.ini - added postgui

--- a/configs/sim/gmoccapy/8_axis.ini
+++ b/configs/sim/gmoccapy/8_axis.ini
@@ -67,6 +67,9 @@ TOOL_CHANGE_POSITION = 0 0 2
 HALUI = halui
 HALFILE = core_sim_8.hal
 
+# Single file that is executed after the GUI has started.
+POSTGUI_HALFILE = gmoccapy_postgui.hal
+
 [TRAJ]
 COORDINATES = X Y Z A B C U V
 LINEAR_UNITS = mm
