xyzac-trt.ini - subroutine
repaired SUBROUTINE_PATH = ./examples:../../macros

--- a/configs/sim/gmoccapy/non_trivial_kinematics/table-rotary-tilting/xyzac-trt.ini
+++ b/configs/sim/gmoccapy/non_trivial_kinematics/table-rotary-tilting/xyzac-trt.ini
@@ -19,9 +19,8 @@ NGCGUI_FONT = Helvetica -12 normal
 NGCGUI_SUBFILE = test-xyzac.ngc
 
 [RS274NGC]
-SUBROUTINE_PATH = ./examples
 PARAMETER_FILE = xyzac.var
-SUBROUTINE_PATH = ../../macros
+SUBROUTINE_PATH = ./examples:../../macros
 REMAP=M6  modalgroup=6 prolog=change_prolog ngc=change_g43 epilog=change_epilog
 REMAP=M61  modalgroup=6 prolog=settool_prolog ngc=settool_g43 epilog=settool_epilog
 
