Distutils elision - Try fix suggested by tefano Rivera (It seems to work for me)

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -1653,7 +1653,7 @@ fi
 AC_MSG_RESULT([$PYTHON_TK_VERSION])
 
 AC_MSG_CHECKING(for site-package location)
-SITEPY=`$PYTHON -c 'import sysconfig; print(sysconfig.get_path("platlib"))'`
+SITEPY=`$PYTHON -c 'import sysconfig; print(sysconfig.get_path("platlib", "deb_system"))'`
 AC_MSG_RESULT($SITEPY)
 
 AC_MSG_CHECKING(for working GLU quadrics)
