docs: update some gitignores for new languages

--- a/docs/man/.gitignore
+++ b/docs/man/.gitignore
@@ -454,6 +454,7 @@ man9/xyzbca_trsrn.9
 # Ignore po4a-generated files for other languages
 ar/*
 bg/*
+ckb/*
 cs/*
 da/*
 de/*
@@ -466,7 +467,9 @@ nb/*
 pl/*
 pt/*
 pt_BR/*
+ro/*
 ru/*
+sai/*
 sk/*
 sv/*
 tr/*
