CI: shellcheck and cppcheck are executed as scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -261,27 +261,8 @@ jobs:
         set -x
         git fetch --recurse-submodules=no https://github.com/linuxcnc/linuxcnc refs/tags/*:refs/tags/*
         sudo apt-get -y install cppcheck shellcheck
-    - name: C
-      continue-on-error: true
-      run: |
-        echo -n "I (1/4): checking HAL folders with C code only from dir "; pwd
-        for d in src/hal/classicladder src/hal/components; do (cd $d && cppcheck -j $(nproc) --language=c --force *.h *.c); done
-        echo -n "I (2/4): checking EMC folders with C code only from dir "; pwd
-        for d in src/emc/motion-logger src/emc/tp; do (cd $d && cppcheck -j $(nproc) --language=c --force *.h *.c); done
-        # problematic: src/hal/drivers src/hal/user_comps src/hal/utits
-    - name: C++
-      continue-on-error: true
-      run: |
-        echo -n "I (3/4): checking EMC folders with C++ code only from dir "; pwd
-        for d in src/emc/canterp src/emc/ini src/emc/pythonplugin src/emc/tooldata; do (cd $d && cppcheck -j $(nproc) --language=c++ --force *.hh *.cc); done
-        # problematic iotask src/emc/sai src/emc/task
-    - name: C and C++ in same dir
-      continue-on-error: true
-      run: |
-        echo -n "I (4/4): checking EMC folders with both C and C++ code from dir "; pwd
-        for d in src/emc/rs274ngc; do (cd $d && cppcheck -j $(nproc) --language=c --force *.h *.c && cppcheck -j $(nproc) --language=c++ --force *.hh *.cc); done
-        # problematic src/emc/kinematics src/emc/nml_intf src/emc/usr_intf
+        scripts/cppcheck.sh
     - name: Shellcheck
       continue-on-error: true
       run: |
-        find . -name "*.sh" | xargs -r -L 1 shellcheck
+        scripts/shellcheck.sh
