Touchy: Move macros to the common [MACROS] INI section rather than [TOUCHY]
Signed-off-by: andypugh <andy@bodgesoc.org>

--- a/configs/sim/touchy/gladevcp/touchy.ini
+++ b/configs/sim/touchy/gladevcp/touchy.ini
@@ -156,7 +156,6 @@ HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
 HOME_SEQUENCE = 0
 
-# section for main IO controller parameters -----------------------------------
-[TOUCHY]
+[MACROS]
 MACRO=increment xinc yinc
 MACRO=probe-hole maxradius
