--- a/configs/sim/touchy/ngcgui/pyngcgui_touchy.ini
+++ b/configs/sim/touchy/ngcgui/pyngcgui_touchy.ini
@@ -146,7 +146,7 @@ HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
 HOME_SEQUENCE = 0
 
-[TOUCHY]
+[MACROS]
 MACRO=increment xinc yinc
 MACRO=probe-hole maxradius
 
