scripts: add a RIP flag to rip environment
Lets be definitive about running a RIP system

--- a/scripts/rip-environment.in
+++ b/scripts/rip-environment.in
@@ -62,6 +62,7 @@ case "$PATH" in
         fi ;;
 esac
 
+LINUXCNC_RIP_FLAG="True"; export LINUXCNC_RIP_FLAG
 EMC2_HOME=@EMC2_HOME@; export EMC2_HOME
 EMC2VERSION="@EMC2VERSION@"; export EMC2VERSION
 LINUXCNCVERSION="@EMC2VERSION@"; export LINUXCNCVERSION
