Add config for NativeCAM using a NativeCAM fork as a Git submodule
You need to run 'git submodule update --init --recursive' for the first time.
Update the submodule with 'git submodule update --recursive' or 'git pull --recurse-submodules'.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@ position.txt
 *.*-stamp
 # Ignore VSCode settings
 .vscode/settings.json
+# By NativeCAM generated files
+configs/sim/gmoccapy/ncam/*
+nc_files/M123
