Fix typos in config/ Found via codespell

--- a/configs/by_interface/parport/plasma-thc-sim/plasma_mm.ini
+++ b/configs/by_interface/parport/plasma-thc-sim/plasma_mm.ini
@@ -273,8 +273,8 @@ HOME_SEQUENCE =			1
 ###############################################################################
 
 [PLASMA]
-# Note that setting Ignition timeout to high can cause issues with very short cuts, problems can arrise when the timeout has not expired and starting to cut a new part
-#- Ignition fault timeout, the time allwed from TorchOn until ArcOK before re-probing and re-initiating, in seconds
+# Note that setting Ignition timeout to high can cause issues with very short cuts, problems can arise when the timeout has not expired and starting to cut a new part
+#- Ignition fault timeout, the time allowed from TorchOn until ArcOK before re-probing and re-initiating, in seconds
 IGNITION_TIMEOUT = 3
 #- ArcOK timeout, a filter, for a signal to be valid it needs to exceed the specified time period, in seconds
 ARC_OK_FILTER_TIME = 0.2
